# leetcode

./: .gitignore  leetgo.yaml  pyproject.toml  ruff.toml
contest/: Cargo.toml  go.mod  staticcheck.conf
contest/biweekly-164/2.two-letter-card-game/: question.md  solution.go  testcases.txt
contest/biweekly-164/3.twisted-mirror-path-count/: question.md  solution.go  testcases.txt
contest/biweekly-165/1.smallest-absent-positive-greater-than-average/: question.md  solution.py  testcases.txt
contest/biweekly-165/2.minimum-discards-to-balance-inventory/: question.md  solution.py  testcases.txt
contest/biweekly-165/3.generate-schedule/: question.md  solution.py  testcases.txt
contest/biweekly-165/4.maximum-xor-of-subsequences/: question.md  solution.py  testcases.txt
contest/biweekly-172/1.minimum-number-of-operations-to-have-distinct-elements/: question.md  solution.go  testcases.txt
contest/biweekly-172/2.maximum-sum-of-three-numbers-divisible-by-three/: question.md  solution.go  testcases.txt
contest/biweekly-172/3.maximum-score-after-binary-swaps/: question.md  solution.go  testcases.txt
contest/biweekly-172/4.last-remaining-integer-after-alternating-deletion-operations/: question.md  solution.go  testcases.txt
contest/weekly-419/1.find-x-sum-of-all-k-long-subarrays-i/: question.md  solution.go
contest/weekly-419/2.k-th-largest-perfect-subtree-size-in-binary-tree/: question.md  solution.go  testcases.txt
contest/weekly-419/3.count-the-number-of-winning-sequences/: question.md  solution.go  testcases.txt
contest/weekly-419/4.find-x-sum-of-all-k-long-subarrays-ii/: question.md  solution.go
contest/weekly-466/3.count-bowl-subarrays/: question.md  solution.go  testcases.txt
contest/weekly-466/4.count-binary-palindromic-numbers/: question.md  solution.go  testcases.txt
contest/weekly-469/2.split-array-with-minimum-difference/: question.md  solution.go  testcases.txt
contest/weekly-469/3.number-of-zigzag-arrays-i/: question.md  solution.go  testcases.txt
rust/: Cargo.toml
rust/src/0085.maximal-rectangle/: question.md  solution.rs
rust/src/0166.fraction-to-recurring-decimal/: question.md  solution.rs  testcases.txt
rust/src/0315.count-of-smaller-numbers-after-self/: question.md  solution.rs  testcases.txt
rust/src/0401.binary-watch/: question.md  solution.rs  testcases.txt
rust/src/0498.diagonal-traverse/: question.md  solution.rs  testcases.txt
rust/src/0696.count-binary-substrings/: question.md  solution.rs  testcases.txt
rust/src/0712.minimum-ascii-delete-sum-for-two-strings/: question.md  solution.rs  testcases.txt
rust/src/0717.1-bit-and-2-bit-characters/: question.md  solution.rs  testcases.txt
rust/src/0744.find-smallest-letter-greater-than-target/: question.md  solution.rs
rust/src/0778.swim-in-rising-water/: question.md  solution.rs  testcases.txt
rust/src/0808.soup-servings/: question.md  solution.rs  testcases.txt
rust/src/0812.largest-triangle-area/: question.md  solution.rs  testcases.txt
rust/src/0837.new-21-game/: question.md  solution.rs  testcases.txt
rust/src/0840.magic-squares-in-grid/: question.md  solution.rs  testcases.txt
rust/src/0865.smallest-subtree-with-all-the-deepest-nodes/: question.md  solution.rs
rust/src/0868.binary-gap/: question.md  solution.rs  testcases.txt
rust/src/0869.reordered-power-of-2/: question.md  solution.rs  testcases.txt
rust/src/0898.bitwise-ors-of-subarrays/: question.md  solution.rs  testcases.txt
rust/src/0904.fruit-into-baskets/: question.md  solution.rs  testcases.txt
rust/src/0955.delete-columns-to-make-sorted-ii/: question.md  solution.rs  testcases.txt
rust/src/0961.n-repeated-element-in-size-2n-array/: question.md  solution.rs  testcases.txt
rust/src/1022.sum-of-root-to-leaf-binary-numbers/: question.md  solution.rs  testcases.txt
rust/src/1161.maximum-level-sum-of-a-binary-tree/: question.md  solution.rs
rust/src/1233.remove-sub-folders-from-the-filesystem/: question.md  solution.rs  testcases.txt
rust/src/1290.convert-binary-number-in-a-linked-list-to-integer/: question.md  solution.rs  testcases.txt
rust/src/1292.maximum-side-length-of-a-square-with-sum-less-than-or-equal-to-threshold/: question.md  solution.rs  testcases.txt
rust/src/1339.maximum-product-of-splitted-binary-tree/: question.md  solution.rs
rust/src/1351.count-negative-numbers-in-a-sorted-matrix/: question.md  solution.rs  testcases.txt
rust/src/1353.maximum-number-of-events-that-can-be-attended/: question.md  solution.rs  testcases.txt
rust/src/1390.four-divisors/: question.md  solution.rs  testcases.txt
rust/src/1404.number-of-steps-to-reduce-a-number-in-binary-representation-to-one/: question.md  solution.rs
rust/src/1415.the-k-th-lexicographical-string-of-all-happy-strings-of-length-n/: question.md  solution.rs  testcases.txt
rust/src/1458.max-dot-product-of-two-subsequences/: question.md  solution.rs  testcases.txt
rust/src/1461.check-if-a-string-contains-all-binary-codes-of-size-k/: question.md  solution.rs  testcases.txt
rust/src/1493.longest-subarray-of-1s-after-deleting-one-element/: question.md  solution.rs  testcases.txt
rust/src/1504.count-submatrices-with-all-ones/: question.md  solution.rs  testcases.txt
rust/src/1526.minimum-number-of-increments-on-subarrays-to-form-a-target-array/: question.md  solution.rs  testcases.txt
rust/src/1536.minimum-swaps-to-arrange-a-binary-grid/: question.md  solution.rs  testcases.txt
rust/src/1545.find-kth-bit-in-nth-binary-string/: solution.rs  testcases.txt
rust/src/1578.minimum-time-to-make-rope-colorful/: question.md  solution.rs  testcases.txt
rust/src/1582.special-positions-in-a-binary-matrix/: question.md  solution.rs  testcases.txt
rust/src/1590.make-sum-divisible-by-p/: question.md  solution.rs  testcases.txt
rust/src/1622.fancy-sequence/: question.md  solution.rs  testcases.txt
rust/src/1680.concatenation-of-consecutive-binary-numbers/: question.md  solution.rs  testcases.txt
rust/src/1695.maximum-erasure-value/: question.md  solution.rs  testcases.txt
rust/src/templates/: bit.rs  (+1 more)
(+1052 files in other folders)
