[[bin]]
name = 'majority-frequency-characters'
path = 'src/biweekly-166/1.majority-frequency-characters/solution.rs'

[[bin]]
name = 'climbing-stairs-ii'
path = 'src/biweekly-166/2.climbing-stairs-ii/solution.rs'

[[bin]]
name = 'distinct-points-reachable-after-substring-removal'
path = 'src/biweekly-166/3.distinct-points-reachable-after-substring-removal/solution.rs'

[[bin]]
name = 'maximize-alternating-sum-using-swaps'
path = 'src/biweekly-166/4.maximize-alternating-sum-using-swaps/solution.rs'

[[bin]]
name = 'coupon-code-validator'
path = 'src/weekly-457/1.coupon-code-validator/solution.rs'

[[bin]]
name = 'power-grid-maintenance'
path = 'src/weekly-457/2.power-grid-maintenance/solution.rs'

[[bin]]
name = 'minimum-time-for-k-connected-components'
path = 'src/weekly-457/3.minimum-time-for-k-connected-components/solution.rs'

[[bin]]
name = 'minimum-moves-to-reach-target-in-grid'
path = 'src/weekly-457/4.minimum-moves-to-reach-target-in-grid/solution.rs'

[[bin]]
name = 'maximum-total-subarray-value-ii'
path = 'src/weekly-468/4.maximum-total-subarray-value-ii/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2024'
name = 'leetcode-solutions'
version = '0.1.0'
