[[bin]]
name = 'count-of-smaller-numbers-after-self'
path = 'src/0315.count-of-smaller-numbers-after-self/solution.rs'

[[bin]]
name = 'convert-binary-number-in-a-linked-list-to-integer'
path = 'src/1290.convert-binary-number-in-a-linked-list-to-integer/solution.rs'

[[bin]]
name = 'maximum-number-of-events-that-can-be-attended'
path = 'src/1353.maximum-number-of-events-that-can-be-attended/solution.rs'

[[bin]]
name = 'maximum-number-of-events-that-can-be-attended-ii'
path = 'src/1751.maximum-number-of-events-that-can-be-attended-ii/solution.rs'

[[bin]]
name = 'meeting-rooms-iii'
path = 'src/2402.meeting-rooms-iii/solution.rs'

[[bin]]
name = 'valid-word'
path = 'src/3136.valid-word/solution.rs'

[[bin]]
name = 'find-the-maximum-length-of-valid-subsequence-i'
path = 'src/3201.find-the-maximum-length-of-valid-subsequence-i/solution.rs'

[[bin]]
name = 'reschedule-meetings-for-maximum-free-time-i'
path = 'src/3439.reschedule-meetings-for-maximum-free-time-i/solution.rs'

[[bin]]
name = 'reschedule-meetings-for-maximum-free-time-ii'
path = 'src/3440.reschedule-meetings-for-maximum-free-time-ii/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2024'
name = 'leetcode-solutions'
version = '0.1.0'
