[[bin]]
name = 'maximal-rectangle'
path = 'src/0085.maximal-rectangle/solution.rs'

[[bin]]
name = 'fraction-to-recurring-decimal'
path = 'src/0166.fraction-to-recurring-decimal/solution.rs'

[[bin]]
name = 'count-of-smaller-numbers-after-self'
path = 'src/0315.count-of-smaller-numbers-after-self/solution.rs'

[[bin]]
name = 'diagonal-traverse'
path = 'src/0498.diagonal-traverse/solution.rs'

[[bin]]
name = 'minimum-ascii-delete-sum-for-two-strings'
path = 'src/0712.minimum-ascii-delete-sum-for-two-strings/solution.rs'

[[bin]]
name = '1-bit-and-2-bit-characters'
path = 'src/0717.1-bit-and-2-bit-characters/solution.rs'

[[bin]]
name = 'swim-in-rising-water'
path = 'src/0778.swim-in-rising-water/solution.rs'

[[bin]]
name = 'soup-servings'
path = 'src/0808.soup-servings/solution.rs'

[[bin]]
name = 'largest-triangle-area'
path = 'src/0812.largest-triangle-area/solution.rs'

[[bin]]
name = 'new-21-game'
path = 'src/0837.new-21-game/solution.rs'

[[bin]]
name = 'magic-squares-in-grid'
path = 'src/0840.magic-squares-in-grid/solution.rs'

[[bin]]
name = 'smallest-subtree-with-all-the-deepest-nodes'
path = 'src/0865.smallest-subtree-with-all-the-deepest-nodes/solution.rs'

[[bin]]
name = 'reordered-power-of-2'
path = 'src/0869.reordered-power-of-2/solution.rs'

[[bin]]
name = 'bitwise-ors-of-subarrays'
path = 'src/0898.bitwise-ors-of-subarrays/solution.rs'

[[bin]]
name = 'fruit-into-baskets'
path = 'src/0904.fruit-into-baskets/solution.rs'

[[bin]]
name = 'delete-columns-to-make-sorted-ii'
path = 'src/0955.delete-columns-to-make-sorted-ii/solution.rs'

[[bin]]
name = 'n-repeated-element-in-size-2n-array'
path = 'src/0961.n-repeated-element-in-size-2n-array/solution.rs'

[[bin]]
name = 'maximum-level-sum-of-a-binary-tree'
path = 'src/1161.maximum-level-sum-of-a-binary-tree/solution.rs'

[[bin]]
name = 'remove-sub-folders-from-the-filesystem'
path = 'src/1233.remove-sub-folders-from-the-filesystem/solution.rs'

[[bin]]
name = 'convert-binary-number-in-a-linked-list-to-integer'
path = 'src/1290.convert-binary-number-in-a-linked-list-to-integer/solution.rs'

[[bin]]
name = 'maximum-product-of-splitted-binary-tree'
path = 'src/1339.maximum-product-of-splitted-binary-tree/solution.rs'

[[bin]]
name = 'count-negative-numbers-in-a-sorted-matrix'
path = 'src/1351.count-negative-numbers-in-a-sorted-matrix/solution.rs'

[[bin]]
name = 'maximum-number-of-events-that-can-be-attended'
path = 'src/1353.maximum-number-of-events-that-can-be-attended/solution.rs'

[[bin]]
name = 'four-divisors'
path = 'src/1390.four-divisors/solution.rs'

[[bin]]
name = 'max-dot-product-of-two-subsequences'
path = 'src/1458.max-dot-product-of-two-subsequences/solution.rs'

[[bin]]
name = 'longest-subarray-of-1s-after-deleting-one-element'
path = 'src/1493.longest-subarray-of-1s-after-deleting-one-element/solution.rs'

[[bin]]
name = 'count-submatrices-with-all-ones'
path = 'src/1504.count-submatrices-with-all-ones/solution.rs'

[[bin]]
name = 'minimum-number-of-increments-on-subarrays-to-form-a-target-array'
path = 'src/1526.minimum-number-of-increments-on-subarrays-to-form-a-target-array/solution.rs'

[[bin]]
name = 'minimum-time-to-make-rope-colorful'
path = 'src/1578.minimum-time-to-make-rope-colorful/solution.rs'

[[bin]]
name = 'make-sum-divisible-by-p'
path = 'src/1590.make-sum-divisible-by-p/solution.rs'

[[bin]]
name = 'maximum-erasure-value'
path = 'src/1695.maximum-erasure-value/solution.rs'

[[bin]]
name = 'maximum-score-from-removing-substrings'
path = 'src/1717.maximum-score-from-removing-substrings/solution.rs'

[[bin]]
name = 'maximum-number-of-events-that-can-be-attended-ii'
path = 'src/1751.maximum-number-of-events-that-can-be-attended-ii/solution.rs'

[[bin]]
name = 'design-movie-rental-system'
path = 'src/1912.design-movie-rental-system/solution.rs'

[[bin]]
name = 'delete-duplicate-folders-in-system'
path = 'src/1948.delete-duplicate-folders-in-system/solution.rs'

[[bin]]
name = 'maximum-matrix-sum'
path = 'src/1975.maximum-matrix-sum/solution.rs'

[[bin]]
name = 'next-greater-numerically-balanced-number'
path = 'src/2048.next-greater-numerically-balanced-number/solution.rs'

[[bin]]
name = 'maximum-fruits-harvested-after-at-most-k-steps'
path = 'src/2106.maximum-fruits-harvested-after-at-most-k-steps/solution.rs'

[[bin]]
name = 'number-of-smooth-descent-periods-of-a-stock'
path = 'src/2110.number-of-smooth-descent-periods-of-a-stock/solution.rs'

[[bin]]
name = 'minimum-difference-in-sums-after-removal-of-elements'
path = 'src/2163.minimum-difference-in-sums-after-removal-of-elements/solution.rs'

[[bin]]
name = 'find-triangular-sum-of-an-array'
path = 'src/2221.find-triangular-sum-of-an-array/solution.rs'

[[bin]]
name = 'minimum-score-after-removals-on-a-tree'
path = 'src/2322.minimum-score-after-removals-on-a-tree/solution.rs'

[[bin]]
name = 'number-of-zero-filled-subarrays'
path = 'src/2348.number-of-zero-filled-subarrays/solution.rs'

[[bin]]
name = 'meeting-rooms-iii'
path = 'src/2402.meeting-rooms-iii/solution.rs'

[[bin]]
name = 'smallest-subarrays-with-maximum-bitwise-or'
path = 'src/2411.smallest-subarrays-with-maximum-bitwise-or/solution.rs'

[[bin]]
name = 'range-product-queries-of-powers'
path = 'src/2438.range-product-queries-of-powers/solution.rs'

[[bin]]
name = 'minimum-penalty-for-a-shop'
path = 'src/2483.minimum-penalty-for-a-shop/solution.rs'

[[bin]]
name = 'rearranging-fruits'
path = 'src/2561.rearranging-fruits/solution.rs'

[[bin]]
name = 'ways-to-express-an-integer-as-sum-of-powers'
path = 'src/2787.ways-to-express-an-integer-as-sum-of-powers/solution.rs'

[[bin]]
name = 'maximize-area-of-square-hole-in-grid'
path = 'src/2943.maximize-area-of-square-hole-in-grid/solution.rs'

[[bin]]
name = 'maximum-square-area-by-removing-fences-from-a-field'
path = 'src/2975.maximum-square-area-by-removing-fences-from-a-field/solution.rs'

[[bin]]
name = 'valid-word'
path = 'src/3136.valid-word/solution.rs'

[[bin]]
name = 'find-the-minimum-area-to-cover-all-ones-i'
path = 'src/3195.find-the-minimum-area-to-cover-all-ones-i/solution.rs'

[[bin]]
name = 'find-the-minimum-area-to-cover-all-ones-ii'
path = 'src/3197.find-the-minimum-area-to-cover-all-ones-ii/solution.rs'

[[bin]]
name = 'find-the-maximum-length-of-valid-subsequence-i'
path = 'src/3201.find-the-maximum-length-of-valid-subsequence-i/solution.rs'

[[bin]]
name = 'find-the-maximum-length-of-valid-subsequence-ii'
path = 'src/3202.find-the-maximum-length-of-valid-subsequence-ii/solution.rs'

[[bin]]
name = 'maximum-frequency-of-an-element-after-performing-operations-i'
path = 'src/3346.maximum-frequency-of-an-element-after-performing-operations-i/solution.rs'

[[bin]]
name = 'adjacent-increasing-subarrays-detection-ii'
path = 'src/3350.adjacent-increasing-subarrays-detection-ii/solution.rs'

[[bin]]
name = 'find-the-maximum-number-of-fruits-collected'
path = 'src/3363.find-the-maximum-number-of-fruits-collected/solution.rs'

[[bin]]
name = 'maximum-subarray-sum-with-length-divisible-by-k'
path = 'src/3381.maximum-subarray-sum-with-length-divisible-by-k/solution.rs'

[[bin]]
name = 'maximum-number-of-distinct-elements-after-operations'
path = 'src/3397.maximum-number-of-distinct-elements-after-operations/solution.rs'

[[bin]]
name = 'design-task-manager'
path = 'src/3408.design-task-manager/solution.rs'

[[bin]]
name = 'count-mentions-per-user'
path = 'src/3433.count-mentions-per-user/solution.rs'

[[bin]]
name = 'reschedule-meetings-for-maximum-free-time-i'
path = 'src/3439.reschedule-meetings-for-maximum-free-time-i/solution.rs'

[[bin]]
name = 'reschedule-meetings-for-maximum-free-time-ii'
path = 'src/3440.reschedule-meetings-for-maximum-free-time-ii/solution.rs'

[[bin]]
name = 'separate-squares-i'
path = 'src/3453.separate-squares-i/solution.rs'

[[bin]]
name = 'fruits-into-baskets-iii'
path = 'src/3479.fruits-into-baskets-iii/solution.rs'

[[bin]]
name = 'maximum-unique-subarray-sum-after-deletion'
path = 'src/3487.maximum-unique-subarray-sum-after-deletion/solution.rs'

[[bin]]
name = 'find-the-minimum-amount-of-time-to-brew-potions'
path = 'src/3494.find-the-minimum-amount-of-time-to-brew-potions/solution.rs'

[[bin]]
name = 'count-special-triplets'
path = 'src/3583.count-special-triplets/solution.rs'

[[bin]]
name = 'power-grid-maintenance'
path = 'src/3607.power-grid-maintenance/solution.rs'

[[bin]]
name = 'best-time-to-buy-and-sell-stock-using-strategy'
path = 'src/3652.best-time-to-buy-and-sell-stock-using-strategy/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2024'
name = 'leetcode-solutions'
version = '0.1.0'
